# hazpenztar

./: .gitignore  import_test.js  package-lock.json  package.json  restore_working.ps1
.github/workflows/: build.yml  main.yml
BACKUP_befor_BUILD/backup_working_20260318_121109/: main.js
BACKUP_befor_BUILD/backup_working_20260318_1825/: main.js
BACKUP_befor_BUILD/backup_working_20260318_1825/01/: main.js
BACKUP_befor_BUILD/src/: import_test.js  index_backup_before_csv_import.html  index_working_after_webfix.html
BACKUP_befor_BUILD/src-tauri/: Cargo.toml
BACKUP_befor_BUILD/src-tauri/src/: main.rs
backup_working_20260318_121109/: index.html
backup_working_20260318_1825/: csv-import.js  index.html
backup_working_20260318_1825/01/: main_backup_before_name_matching.js
sample_imports/: minta_import.csv
src/: index_IMPORT_TEST_BROKEN.html  main_BACKUP_20260319.js  main_BROKEN_before_restore.js.js  smart_xlsx_import.js
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: EvesGrafikon.tsx
