[package]
name = "hazpenztar"
version = "0.1.0"
description = "Társasház házpénztár alkalmazás"
authors = ["Deme Gábor"]
edition = "2021"

[lib]
name = "hazpenztar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
printpdf = "0.7"
